fixed typos in Cauchy's theorem for groups

--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -991,7 +991,7 @@
 		\label{thm:Teorema de Cauchy per grups}
 		Siguin \(G\) un grup d'ordre finit amb l'operació \(\ast\) i \(p\) un primer que divideix l'ordre de \(G\). Aleshores existeix un element \(g\in G\) tal que l'ordre de \(g\) sigui \(p\).
 		\begin{proof}
-			Direm que \(e\) és l'element neutre de \(G\). Pel \myref{thm:Primer Teorema de Sylow} tenim que existeix un \(p\)-subgrup de Sylow \(P\) de \(G\), que per la definició de \myref{def:p-subgrup de Sylow} té ordre \(p^{n}\) per a cert \(n\in\mathbb{N}\). Ara bé, pel \myref{thm:Teorema de Lagrange} tenim que per a tot \(x\in P\) diferent del neutre el grup cíclic general per \(x\) ha de tenir ordre \(p^{t}\) amb \(t\in\{2,\dots,n\}\), i per tant l'element \(x^{p^{t-1}}\) té ordre \(p\), ja que 
+			Direm que \(e\) és l'element neutre de \(G\). Pel \myref{thm:Primer Teorema de Sylow} tenim que existeix un \(p\)-subgrup de Sylow \(P\) de \(G\), que per la definició de \myref{def:p-subgrup de Sylow} té ordre \(p^{n}\) per a cert \(n\in\mathbb{N}\). Ara bé, pel \myref{thm:Teorema de Lagrange} tenim que per a tot \(x\in P\) diferent del neutre el grup cíclic generar per \(x\) ha de tenir ordre \(p^{t}\) amb \(t\in\{2,\dots,n\}\), i per tant l'element \(x^{p^{t-1}}\) té ordre \(p\), ja que 
 			\[\left(x^{p^{t-1}}\right)^{p}=x^{p^{t}}=e.\qedhere\]
 		\end{proof}
 	\end{corollary}
