Afegit enunciat del Teorema d'Euclides

--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1270,6 +1270,13 @@
 			És conseqüència del lemma \myref{lemma:thm:Teorema Fonamental de l'Aritmètica 1} i el lemma \myref{lemma:thm:Teorema Fonamental de l'Aritmètica 2}.
 		\end{proof}
 	\end{theorem}
+	\begin{theorem}[Teorema d'Euclides]
+		\labelname{Teorema d'Euclides}\label{thm:Teorema d'Euclides}
+		Sigui \(m\) un natural. Aleshores existeix un nombre natural \(n>m\) tal que \(p_{1},\dots,p_{n}\) siguin nombres primers diferents dos a dos.
+		\begin{proof}
+			%FER
+		\end{proof}
+	\end{theorem}
 	\section{Els nombres modulars}
 	\subsection{Construcció dels nombres modulars}
 	\begin{proposition}
