Afegida part d'Àlgebra Lineal, però de moment està buida. També he acabat la bibliografia de Fonaments

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -195,6 +195,8 @@
 	\tableofcontents}
 	\part{Fonaments de les matemàtiques}
 		\subfile{parts/FNM.tex}
+	\part{Àlgebra Lineal}
+		\subfile{parts/AlgebraLineal.tex}
 	\part{Coses per fer a l'estiu}
 		\subfile{parts/Intro.tex}
 	\part{Càlcul en diverses variables i optimització}
