--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1104,7 +1104,7 @@
 			i per tant \(r-d\) seria un element de \(S\), amb \(r-d<r\), però això entraria amb contradicció amb que \(r=\min\{x\in S\}\). Per tant \(\leq r<d\) i hem acabat.
 		\end{proof}
 	\end{lemma}
-	\begin{theorem}[Criteri de divisibilitat d'Euclides] %MOURE
+	\begin{theorem}[Criteri de divisibilitat d'Euclides] %MOURE?
 		\labelname{criteri de divisibilitat d'Euclides}\label{thm:divisió euclidiana}
 		\label{thm:criteri de divisibilitat d'Euclides} %Veure que les referències estan bé.
 		Siguin \(D\) i \(d\) nombres enters amb \(d\neq0\). Aleshores existeixen dos únics \(q\), \(r\) enters tals que
@@ -1728,7 +1728,7 @@
 		\[\sigma=\tau_{1}\circ\dots\circ\tau_{r}=\tau'_{1}\circ\dots\circ\tau'_{r'}.\]
 		Aleshores \(r-r'\) és parell.
 		\begin{proof}
-			%TODO
+			No m'agraden les demostracions que veig ni em surt una millor.%TODO%FER
 		\end{proof}
 	\end{theorem}
 	\begin{definition}[Signe d'una permutació]
@@ -1934,6 +1934,8 @@
 %	\section{Els nombres reals}
 %	http://www.math.uni-konstanz.de/~krapp/Constructions_of_the_real_numbers.pdf
 	\printbibliography
-	La secció sobre els axiomes de Peano està fortament inspirada en \cite{notesKumar}.
+	La secció sobre els axiomes de Peano està fortament inspirada en \cite{notesKumar}. La resta de la teoria és una combinació de \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta} i \cite{TemesFonaments}, uns apunts de l'assignatura que sospito que només són accessibles des del campus virtual.
+	
+	La bibliografia del curs inclou els textos \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta,CastelletLlerenaAlgebraLinealIGeometria,GodementAlgebra,NutsAndBoltsOfProofs,BujalanceBujalanceCostaProblemasMatematicaDiscreta,IntroductionToMathematicalReasoning,ChapterZeroSchumacher}.
 \end{document}
 %AFEGIR paradoxa de Russell
