--- a/referencies.bib
+++ b/referencies.bib
@@ -230,3 +230,66 @@
 	OPTlanguage = {Anglès},
 	OPTurldate = {2011-10-03},
 }
+
+@unpublished{TemesFonaments,
+	author = {Reventós Tarrida, Agustí},
+	title = {Temes diversos de fonaments de les matemàtiques},
+	date = {2014},
+}
+
+@Book{CastelletLlerenaAlgebraLinealIGeometria,
+	author = {Castellet, Manuel and Llerena, Irene},
+	title = {Àlgebra lineal i geometria},
+	publisher = {Servei de Publicacions de la Universitat Autònoma de Barcelona},
+	year = {2009},
+	isbn = {84-7488-943-X},
+}
+
+@Book{GodementAlgebra,
+	author = {Godement, Roger},
+	title = {Algebra},
+	publisher = {Kershaw Publishing Co Ltd},
+	year = {1969},
+	isbn = {978-0901665003},
+	language = {Anglès},
+}
+
+@Book{NutsAndBoltsOfProofs,
+	author = {Cupillari, Antonella},
+	title = {The Nuts and Bolts of Proofs},
+	subtitle = {An Introduction to Mathematical Proofs},
+	publisher = {Academic Press},
+	edition = {4\textup{a} ed.},
+	year = {2012},
+	isbn = {978-0123822178},
+	language = {Anglès},
+}
+
+@Book{BujalanceBujalanceCostaProblemasMatematicaDiscreta,
+	author = {Bujalance García, Emilio and Bujalance García, José Antonio and Costa González, Antonio Félix and Martínez García, Ernesto},
+	title = {Problemas de Matemática Discreta},
+	publisher = {Sanz y Torres},
+	year = {1933},
+	isbn = {9788488667038},
+	language = {Castellà},
+}
+
+@Book{IntroductionToMathematicalReasoning,
+	author = {Eccles, Peter},
+	title = {An Introduction to Mathematical Reasoning},
+	subtitle = {Numbers, Sets and Functions},
+	publisher = {University of Manchester},
+	year = {1997},
+	isbn = {9780521597180},
+	language = {Anglès},
+}
+
+@Book{ChapterZeroSchumacher,
+	author = {Schumacher, Carol},
+	title = {Chapter Zero},
+	subtitle = {Fundamental Notions of Abstract Mathematics},
+	publisher = {Addison Wesley},
+	year = {2001},
+	isbn = {9780201826531},
+	language = {Anglès},
+}
