Fet un esbós de l'estructura d'àlgebra lineal

--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -1,6 +1,24 @@
 \documentclass[../Apunts.tex]{subfiles}
 
 \begin{document}
-\chapter{Les coses lineals}
-se viene
+\chapter{Matrius}
+\section{Els cossos}
+\subsection{Les operacions d'un cos}
+\begin{definition}[Cos]
+	content...
+\end{definition}
+\section{Sistema d'equacions lineals}
+
+\chapter{Espais vectorials i aplicacions lineals}
+\section{Espais vectorials}
+\section{Aplicacions lineals}
+
+\chapter{Classificació d'endomorfismes}
+\section{Endomorfismes similars}
+\section{Diagonalització}
+\section{Forma canònica de Jordan}
+\section{Forma canònica racional}
+
+\chapter{Espais vectorials euclidans}
+
 \end{document}
