--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -470,7 +470,7 @@
 		\end{enumerate}
 		Aleshores direm que \(\sim\) és una relació d'equivalència en \(X\).
 	\end{definition}
-	\subsection{Classes d'equivalència}
+	\subsection{Classes d'equivalència i conjunt quocient}
 	\begin{definition}[Classe d'equivalència]
 		\labelname{classe d'equivalència}\label{def:classe d'equivalència}
 		Siguin \(X\) un conjunt no buit, \(\sim\) una classe d'equivalència en \(X\) i
@@ -491,7 +491,7 @@
 			Suposem ara que \(x\nsim y\) i prenem un element \(z\in[x]\cap[y]\). Aleshores, per la definició de \myref{def:classe d'equivalència} tenim que \(z\sim x\) i \(y\sim z\), i per la definició de \myref{def:relació d'equivalència} tenim que \(x\sim y\). Ara bé, havíem suposat que \(x\nsim y\). Per tant \(z\) no pot existir i trobem \([x]\cap[y]=\emptyset\).
 		\end{proof}
 	\end{proposition}
-	\subsection{Conjunt quocient}
+%	\subsection{Conjunt quocient}
 	\begin{definition}[Conjunt quocient]
 		\labelname{conjunt quocient}\label{def:conjunt quocient}
 		Siguin \(X\) un conjunt no buit i \(\sim\) una relació d'equivalència en \(X\). Aleshores definim el conjunt
