Començat àlgebra lineal

--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -2,15 +2,34 @@
 
 \begin{document}
 \chapter{Matrius}
-\section{Els cossos}
-\subsection{Les operacions d'un cos}
-\begin{definition}[Cos]
-	content...
-\end{definition}
-\section{Sistema d'equacions lineals}
+\section{Matrius i operacions}
+\subsection{Cossos}
+	\begin{definition}[Cos]
+		Aclarir on va aquest apartat.
+	\end{definition}
+\subsection{Les matrius}
+	\begin{definition}[Matriu]
+		\labelname{matriu}\labelname{matriu quadrada}
+	\end{definition}
+	\begin{definition}[Conjunt de matrius]
+	\end{definition}
+	\begin{definition}[Suma de matrius]
+	\end{definition}
+	\begin{definition}[Producte de matrius]
+	\end{definition}
+\subsection{Operacions amb matrius}
+\section{Rang d'una matriu}
+\subsection{Transformacions elementals}
+\subsection{Matrius esglaonades i mètode de Gauss}
+\subsection{Teorema de la PAQ}
+\subsection{Càlcul de la inversa d'una matriu invertible}
+\section{Sistemes d'equacions lineals}
+\subsection{Teorema de Rouché-Frobenius}
+\subsection{Determinant d'una matriu}
 
 \chapter{Espais vectorials i aplicacions lineals}
 \section{Espais vectorials}
+
 \section{Aplicacions lineals}
 
 \chapter{Classificació d'endomorfismes}
@@ -19,6 +38,6 @@
 \section{Forma canònica de Jordan}
 \section{Forma canònica racional}
 
-\chapter{Espais vectorials euclidans}
+\chapter{Espais vectorials euclidians}
 
 \end{document}
